# per-pixel-point-rendering

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml
interactive/: interactive_projections.py
report/: references.bib  report.bbl  report.tex
report/content/: 1_introduction.tex  2_paper_presentation.tex  3_our_work.tex  4_discussion.tex  5_conclusion.tex  appendix.tex
scripts/: config.py  experiments_definition.py  novel_views_interactive.py  optimize_point_based_neural_renderer.py  shared_parser.py
src/pixr/: properties.py
src/pixr/camera/: camera.py  camera_geometry.py
src/pixr/interactive/: interactive_plugins.py  utils.py
src/pixr/learning/: architecture.py  base.py  bypass.py  dataloader.py  experiments.py  loss.py  metrics.py  stacked_convolutions.py  unet.py  utils.py
src/pixr/multiview/: scene_definition.py  scenes_utils.py
src/pixr/rasterizer/: rasterizer.py  rasterizer_parallel.py  rasterizer_sequential.py
src/pixr/rendering/: colors_aggregation.py  differentiate_forward_project.py  legacy_splatting.py  splatting.py  zbuffer_pass.py
src/pixr/synthesis/: normals.py  (+11 more)
studies/: blender_proc_exports.py  config.py  differentiate_forward_project.py  differentiate_points_projection.py  differentiate_points_splat.py  export_test_scenes.py  full_render.py  interactive_plugins.py  interactive_projections.py  interactive_rasterizer.py  novel_views.py  novel_views_interactive.py  optimize_point_based_neural_renderer.py  rasterizer.py  splat_render.py
test/: test_camera_geometry.py  test_dataset_utils.py
